samples/_failures_safe/1761402659_e73484_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7860318.c: In function ‘print_stats’:
./samples/SAFE/__tmp_d7860318.c:136:5: error: expected declaration or statement at end of input
  136 |     printf("Log Analysis Results:\n");
      |     ^~~~~~
